--- a/manifest.json
+++ b/manifest.json
@@ -26,53 +26,21 @@
   "name": "Matter adapter",
   "options": {
     "default": {
-	  "A boolean setting": false,
-	  "A number setting": 5.5,
-	  "A slider setting": 0,
-	  "A string setting": "Hello world",
-	  "An enum setting": "Auto",
       "Debugging": false
     },
     "schema": {
       "properties": {
-        "A boolean setting": {
-          "type": "boolean",
-          "description": "If you enable this feature, something will happen. Whenever users save new settings the addon will be restarted."
-		},
-        "A number setting": {
-          "type": "number",
-          "description": "Write a description here for a float."
-		},
-        "A slider setting": {
-          "description": "Write a description here for a number. This one will be displayed as a slider, and is useful if you want to limit the range that users can enter. The only difference is that a maximum and minimum is provided",
-		  "minimum": -10,
-		  "maximum": 10,
-		  "type": "number"
-		},
-        "A string setting": {
-          "type": "string",
-          "description": "Write a description here"
-		},
-        "An enum setting": {
-          "type": "string",
-          "description": "Write a description here. The only difference with a normal string is that enum is provided, which forces uses to select on of the options.",
-          "enum": [
-			"Auto",
-            "Option 1",
-			"Option 2"
-          ]
-		},
         "Debugging": {
           "type": "boolean",
-          "description": "Advanced. Starting this sentence with 'Advanced. ' will cause it be be shown under the advanced settings in the Candle store."
+          "description": "Advanced. Will generate details about the addon's processes in the internal log."
         }
       },
-      "required": ["A string setting"],
+      "required": [],
       "type": "object"
     }
   },
   "short_name": "matter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "web_accessible_resources": [
     "css/*.css",
     "images/*.svg",
