--- a/manifest.json
+++ b/manifest.json
@@ -26,10 +26,15 @@
   "name": "Matter adapter",
   "options": {
     "default": {
-      "Debugging": false
+      "Debugging": false,
+	  "Use Hotspot addon as WiFi network for devices": true
     },
     "schema": {
       "properties": {
+		"Use Hotspot addon as WiFi network for devices":{
+            "type": "boolean",
+            "description": "It is recommended to use the Hotspot addon to generate a separate guest WiFi network for smart devices that connect using Wi-Fi. Doing so will give you more control over the communication habits of your Matter devices."
+		},
         "Debugging": {
           "type": "boolean",
           "description": "Advanced. Will generate details about the addon's processes in the internal log."
@@ -40,7 +45,7 @@
     }
   },
   "short_name": "matter",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "web_accessible_resources": [
     "css/*.css",
     "images/*.svg",
