--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 coloredlogs
 aiorun
-aiohttp
+home-assistant-chip-core
 home-assistant-chip-repl
+home-assistant-chip-clusters
 python-matter-server[server]
