--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,38 +23,17 @@ jobs:
 
   build:
     needs: get-release
-    strategy:
-      matrix:
-        platform: [
-#          'linux-arm',
-          'linux-arm64',
-#          'linux-x64',
-        ]
-        pair: [
-#          'python:3.7',
-          'python:3.9',
-#          'python:3.11'
-        ]
-        include:
-#          - platform: 'linux-arm'
-#            host-os: 'ubuntu-latest'
-          - platform: 'linux-arm64'
-            host-os: 'ubuntu-latest'
-#          - platform: 'linux-x64'
-#            host-os: 'ubuntu-latest'
-#          - pair: 'python:3.7'
-#            language: 'python'
-#            version: '3.7'
-          - pair: 'python:3.9'
-            language: 'python'
-            version: '3.9'
-#          - pair: 'python:3.11'
-#            language: 'python'
-#            version: '3.11'
-
-    runs-on: ${{ matrix.host-os }}
-
+    runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+    - uses: pguyot/arm-runner-action@v2
+      id: build_image
+      with:
+        base_image: raspios_lite_arm64:latest
+        commands: |
+            uname -a
+            grep Model /proc/cpuinfo
+
     - name: Download upload_url
       uses: actions/download-artifact@v3
       with:
@@ -65,10 +44,10 @@ jobs:
     - name: Set release version
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
     - uses: actions/checkout@v3
-    - name: Use Python ${{ matrix.version }}
+    - name: Use Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.version }}
+        python-version: 3.9
     - name: update pip
       run: python3 -m pip install --upgrade pip
     - name: Make build script executable
@@ -77,7 +56,7 @@ jobs:
       run: chmod +x ./package.sh
     - name: Build adapter
       run: |
-        ./build.sh "${{ matrix.platform }}" "${{ matrix.language }}" "${{ matrix.version }}"
+        ./build.sh "linux-arm64" "python" "3.9"
       shell: bash
       
     - name: Upload Release Asset tgz
@@ -85,12 +64,12 @@ jobs:
       with:
         #upload_url: ${{ github.event.release.upload_url }}
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz
+        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.9.tgz
       
     - name: Upload Release Asset shasum
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         #upload_url: ${{ github.event.release.upload_url }}
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz.sha256sum
-      
+        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.9.tgz.sha256sum
+
