--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,14 +35,16 @@ jobs:
       run: echo "UPLOAD_URL=$(cat upload_url/upload_url)" >> $GITHUB_ENV
     - name: Set release version
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
-    - name: Make build script executable
-      run: chmod +x ./build/build.sh
-    - name: Make packaging script executable
-      run: chmod +x ./build/package.sh
+    #- name: Make build script executable
+    #  run: chmod +x ./build/build.sh
+    #- name: Make packaging script executable
+    #  run: chmod +x ./package.sh
       
     - uses: actions/checkout@v3
       with:
         path: './build'
+    - name: Make packaging script executable
+      run: chmod +x ./build/package.sh
     - uses: uraimo/run-on-arch-action@v2
       name: Run commands
       
