--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,7 @@ jobs:
           #apt-get install -q -y --no-install-recommends cmake make gcc libc6-dev
           apt-get install wget python3.9 python3-pip -y
         run: |
+          pip3 install setuptools wheel
           echo ::set-output name=ls::$(ls)
           cd build
           echo ::set-output name=ls2::$(ls2)
