--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,7 +91,7 @@ jobs:
                 libsqlite3-dev \
                 libssl-dev \
                 libudev-dev \
-                python3.9 \
+                python3.11 \
                 python3-pip \
                 openssl \
                 pkg-config \
@@ -103,10 +103,11 @@ jobs:
                 libpango1.0-dev \
                 libgif-dev \
                 software-properties-common \
-                python3-distutils
-                
-          apt-get install --reinstall python3.9-distutils python3.9-dev -y
-          python3.9 -m pip install setuptools wheel
+                python3-distutil \
+                python3-dev \
+                python3-setuptools \
+                pyhton3-wheel
+
         run: |
           cd build
           chmod +x package.sh
@@ -121,11 +122,11 @@ jobs:
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.9.tgz
+        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz
       
     - name: Upload Release Asset shasum
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.9.tgz.sha256sum
+        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz.sha256sum
 
