--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,7 @@ jobs:
                 software-properties-common \
                 python3-distutil \
                 python3-dev \
+                python3-dbus \
                 python3-setuptools \
                 pyhton3-wheel
 
