--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,8 +106,7 @@ jobs:
                 python3-distutil \
                 python3-dev \
                 python3-dbus \
-                python3-setuptools \
-                pyhton3-wheel
+                python3-wheel
 
         run: |
           cd build
