--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,8 @@ jobs:
           apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa
           apt-get update -q -y
-          apt install -y sudo wget openssl python3.11 python3-pip python3-dev python3-dbus python3-wheel 
+          apt install -y sudo wget openssl python3.11 python3-pip python3-dbus python3-wheel python3-dev
+          
           
           apt install -y \
                 autoconf \
@@ -95,12 +96,12 @@ jobs:
                 libudev-dev \
                 pkg-config \
                 zlib1g-dev \
-                libcairo2-dev \
                 libjpeg-dev \
                 libpango1.0-dev \
                 libgif-dev \
                 software-properties-common \
-                
+
+          apt install libcairo2-dev pkg-config python3-dev
 
         run: |
           cd build
