--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,10 +69,11 @@ jobs:
           apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa
           apt-get update -q -y
-          apt install -y sudo wget openssl python3.11 python3-pip python3-dbus python3-wheel python3-dev
+          apt install -y 
           
           
           apt install -y \
+                wget \
                 autoconf \
                 automake \
                 build-essential \
@@ -100,6 +101,13 @@ jobs:
                 libpango1.0-dev \
                 libgif-dev \
                 software-properties-common \
+                sudo \
+                openssl \
+                python3.11 \
+                python3-pip \
+                python3-dbus \
+                python3-wheel \
+                python3-dev
 
           apt install libcairo2-dev pkg-config python3-dev
 
