--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,11 +113,12 @@ jobs:
                 python3-pip \
                 python3-dbus \
                 python3-wheel \
-                python3-dev
+                python3.11-dev \
+                libpython3.11-dev
           echo ""
           echo "."
           echo "Attempting libcairo install"
-          apt install -y libcairo2-dev pkg-config python3-dev 
+          apt install -y libcairo2-dev pkg-config python3.11-dev libpython3.11-dev
 
         run: |
           cd build
