--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,8 @@ jobs:
         githubToken: ${{ github.token }}
 
         install: |
+          echo "."
+          echo "INSTALL"
           apt install software-properties-common -y
           add-apt-repository universe
           add-apt-repository 'ppa:deadsnakes/ppa'
