--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   get-release:
-    runs-on: ubuntu20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Get Release
       id: get_release
@@ -23,7 +23,7 @@ jobs:
 
   build:
     needs: get-release
-    runs-on: ubuntu20.04
+    runs-on: ubuntu-latest
     steps:
     
     - name: Download upload_url
@@ -42,8 +42,7 @@ jobs:
     - name: Make packaging script executable
       run: chmod +x ./build/package.sh
     - uses: uraimo/run-on-arch-action@v2
-      name: Run commands
-      
+      name: Build on ubuntu-20.04 aarch64
       id: runcmd
       with:
         arch: aarch64
@@ -64,6 +63,8 @@ jobs:
         # Not required, but speeds up builds by storing container images in
         # a GitHub package registry. Make sure there are no secrets in the disk image!
         githubToken: ${{ github.token }}
+
+        shell: /bin/bash
 
         install: |
           echo "."
