--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,10 @@ jobs:
         name: upload_url
         path: upload_url
 
-  build:
+  build13:
     needs: get-release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
-    
     - name: Download upload_url
       uses: actions/download-artifact@v3
       with:
@@ -35,62 +34,24 @@ jobs:
       run: echo "UPLOAD_URL=$(cat upload_url/upload_url)" >> $GITHUB_ENV
     - name: Set release version
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
-      
     - uses: actions/checkout@v3
-      with:
-        path: './build'
     - name: Make packaging script executable
-      run: chmod +x ./build/package.sh
-    - uses: uraimo/run-on-arch-action@v2
-      name: Build on ubuntu-20.04 aarch64
-      id: runcmd
-      with:
-        arch: aarch64
-        distro: ubuntu20.04
-        setup: |
-          echo "."
-          echo ".."
-          echo "run-on-arch setup"
-          mkdir -p "${PWD}/build"
-          
-        # Mount the build directory as /build in the container
-        dockerRunArgs: |
-          --volume "${PWD}/build:/build"
-          #--volume "${PWD}/package:/package"
-
-        # Pass some environment variables to the container
-        #env: | # YAML, but pipe character is necessary
-          #artifact_name: git-${{ matrix.distro }}_${{ matrix.arch }}
-        
-        # Not required, but speeds up builds by storing container images in
-        # a GitHub package registry. Make sure there are no secrets in the disk image!
-        #githubToken: ${{ github.token }}
-
-        shell: /bin/bash
-
-        install: |
-          echo "."
-          echo "INSTALL"
-          
-        run: |
-          cd build
-          chmod +x package.sh
-          ADDON_ARCH=linux-arm64 ./package.sh
-     
+      run: chmod +x ./build/package13.sh
+    - name: Build adapter
+      run: |
+        ADDON_ARCH=linux-arm64 ./package13.sh
+      shell: bash
     - name: List after container
       run: |
         ls -lh
       shell: bash
-      
     - name: Upload Release Asset tgz
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz
-      
+        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.13.tgz
     - name: Upload Release Asset shasum
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz.sha256sum
-
+        asset_path: build/matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.13.tgz.sha256sum
