--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
     - uses: actions/checkout@v3
     - name: Make packaging script executable
-      run: chmod +x ./build/package13.sh
+      run: chmod +x ./package13.sh
     - name: Build adapter
       run: |
         ADDON_ARCH=linux-arm64 ./package13.sh
