--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,10 @@ jobs:
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
     - uses: actions/checkout@v3
     - name: Make packaging script executable
-      run: chmod +x ./package13.sh
+      run: chmod +x ./package.sh
     - name: Build adapter
       run: |
-        ADDON_ARCH=linux-arm64 SETUPTOOLS_USE_DISTUTILS=stdlib ./package13.sh
+        ADDON_ARCH=linux-arm64 ./package.sh
       shell: bash
     - name: List after container
       run: |
@@ -49,9 +49,9 @@ jobs:
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.13.tgz
+        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz
     - name: Upload Release Asset shasum
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.13.tgz.sha256sum
+        asset_path: matter-adapter-${{ env.RELEASE_VERSION }}-linux-arm64-v3.11.tgz.sha256sum
